--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,17 @@
                 <version>4.11</version>
                 <scope>test</scope>
             </dependency>
-          <dependency>
+            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.18.1</version>
-          </dependency>
-        </dependencies>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.surefire</groupId>
+                <artifactId>surefire-testng</artifactId>
+                <version>2.18.1</version>
+            </dependency>
+  </dependencies>
         <reporting>
             <plugins>
                 <plugin>
